base/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: processcube-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: websecure-engine
    port: 443
    protocol: HTTPS
    hostname: engine.dev.5minds.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: engine-tls
    allowedRoutes:
      namespaces:
        from: Same
  - name: websecure-authority
    port: 443
    protocol: HTTPS
    hostname: authority.dev.5minds.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: authority-tls
    allowedRoutes:
      namespaces:
        from: Same
  - name: websecure-nodered
    port: 443
    protocol: HTTPS
    hostname: nodered.dev.5minds.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: nodered-tls
    allowedRoutes:
      namespaces:
        from: Same
